# byre

./: .gitignore  .gitmodules  README.md  pylintrc  pyproject.toml
byre/: __init__.py  __main__.py  api.py  bt.py  byre.example.toml  commands.py  data.py  planning.py  scoring.py  storage.py  utils.py
byre/clients/: __init__.py  api.py  byr.py  client.py  data.py  tju.py
byre/commands/: __init__.py  bt.py  byre.example.toml  config.py  main.py  nexus.py  pretty.py
byre/decaptcha/: __init__.py  captcha_classifier.1.2.2.pkl
byre/locales/zh/LC_MESSAGES/: messages.mo  messages.po
byre/setup/: __init__.py  byre.example.toml  byre_config.py  qBittorrent.conf.tmpl  qbittorrent.service.tmpl
tests/: context.py  test_client.py  test_decaptcha.py  test_qb_client.py  test_storage.py  test_tjupt.py
