[tool.pdm]

[project]
name = "byre"
version = "0.1.0"
description = "北邮人命令行操作以及 BT 软件整合实现"
authors = [
    {name = "Yesh", email = "yesh@aliyun.com"},
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.28.2",
    "python-dotenv>=1.0.0",
    "qbittorrent-api>=2023.3.44",
    "click>=8.1.3",
    "tomli>=2.0.1",
    "tabulate[widechars]>=0.9.0",
    "overrides>=7.3.1",
    "bencoder-pyx>=3.0.1",
    "psutil>=5.9.4",
    "appdirs>=1.4.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPLv3"}

[project.scripts]
byre = "byre.__main__:entry_point"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
